--- a/examples/funcalign/model_evaluation_pipeline_classification.ipynb
+++ b/examples/funcalign/model_evaluation_pipeline_classification.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,6 @@
     "    alldata = data[0]\n",
     "    alllabel = label\n",
     "    session_label = 0*np.ones(len(label))\n",
-    "\n",
     "    for s in range(1,len(data)):\n",
     "        alldata = np.append(alldata, data[s], axis = 1)\n",
     "        alllabel = np.append(alllabel, label, axis = 0)\n",
@@ -209,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -304,6 +303,24 @@
     "    plot_confusion_matrix(cm, title=\"Confusion matrices for different test subjects\")\n",
     "    print(\"The average accuracy among all subjects is {0:f} +/- {1:f}\".format(np.mean(accuracy), np.std(accuracy)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
